--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
   <section id="gallery">
     <div class="photo">
-      <img src="photo1.jpg" alt="Description of photo 1">
+      <img src="photo1.jpg" alt="Sunset">
       <p>Description of photo 1.</p>
     </div>
     <div class="photo">
