--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </header>
   <section id="gallery">
     <div class="photo">
-      <img src="photo1.jpg" alt="Sunset">
-      <p>Description of photo 1.</p>
+      <img src="photo1.jpg" alt="Description of photo 1">
+      <p>Sunset.</p>
     </div>
     <div class="photo">
       <img src="photo2.jpg" alt="Description of photo 2">
