--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <section id="gallery">
     <div class="photo">
       <img src="photo1.jpg" alt="Description of photo 1">
-      <p>Sunset.</p>
+      <p>Fog over the mountains is enhancing the scenic beauty of Tirumala.</p>
     </div>
     <div class="photo">
       <img src="photo2.jpg" alt="Description of photo 2">
-      <p>Description of photo 2.</p>
+      <p>The holy mountains known as Saptagiri gives a warm welcome to the devotees</p>
     </div>
     <div class="photo">
       <img src="photo3.jpg" alt="Description of photo 3">
-      <p>Description of photo 3.</p>
+      <p>These mountains are high into the sky touching the clouds.</p>
     </div>
   </section>
 </body>
