--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TIRUMALA</title>
+  <title>My Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Photo Gallery</h1>
+    <h1>TIRUMALA</h1>
   </header>
   <section id="gallery">
     <div class="photo">
